# rcsb

./: README.md  example.ipynb  pyproject.toml
_code_generation/: data_header.py  rcsb_data_classes.py  rcsb_search_classes.py  search_header.py
resources/: structure_schema.json
src/rcsb/: __init__.py  _core.py  _fetch.py  _lcs.py  _lcs_numba.py  _mutate_util.py  _query.py  batched.py  data.py  graphql.py  qb.pyi  query.py  schema.py  search.py  uniprot.py
